[gd_scene load_steps=19 format=3 uid="uid://vrw1exck38gy"]

[ext_resource type="Texture2D" uid="uid://u8481uccsuo6" path="res://assets/main_menu/main_menu.png" id="1_631f2"]
[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_j8whp"]
[ext_resource type="FontFile" uid="uid://drtyjmn5lnvkq" path="res://assets/fonts/DK Frozen Memory.otf" id="2_rtaln"]
[ext_resource type="AudioStream" uid="uid://bn683hartegc1" path="res://assets/main_menu/button_click2.mp3" id="4_excke"]
[ext_resource type="AudioStream" uid="uid://dbdg1a61f2x3x" path="res://assets/main_menu/menu_music.mp3" id="5_f1quw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vgphq"]
texture = ExtResource("1_631f2")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnwud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2rgp"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_221du"]
bg_color = Color(0.505882, 0.0470588, 0.239216, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_advrw"]
bg_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhm1w"]
bg_color = Color(0.505882, 0.0470588, 0.239216, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yf45q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kw14"]
bg_color = Color(0.505882, 0.0470588, 0.239216, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28vq7"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g02qs"]
bg_color = Color(0.505882, 0.0470588, 0.239216, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_or02n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxo88"]
bg_color = Color(0.505882, 0.0470588, 0.239216, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5aeu8"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8whp")

[node name="button_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_excke")
volume_db = 1.354

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_f1quw")
volume_db = -22.054
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vgphq")
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/Panel"]
position = Vector2(576, 324)

[node name="Control" type="Control" parent="CanvasLayer"]
visibility_layer = 2
z_index = 1
layout_mode = 3
anchor_left = 0.674479
anchor_top = 0.341049
anchor_right = 0.872396
anchor_bottom = 0.848765
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="play_button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -7.0
offset_top = -1.0
offset_right = 222.0
offset_bottom = 85.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rtaln")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_bnwud")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_f2rgp")
theme_override_styles/hover = SubResource("StyleBoxFlat_221du")
theme_override_styles/pressed = SubResource("StyleBoxFlat_advrw")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhm1w")
text = "PLAY"

[node name="settings_button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -5.0
offset_top = 114.0
offset_right = 223.0
offset_bottom = 200.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rtaln")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_yf45q")
theme_override_styles/hover = SubResource("StyleBoxFlat_6kw14")
theme_override_styles/pressed = SubResource("StyleBoxFlat_28vq7")
theme_override_styles/normal = SubResource("StyleBoxFlat_g02qs")
text = "SETTINGS"

[node name="exit_button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -7.0
offset_top = 240.0
offset_right = 221.0
offset_bottom = 326.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_rtaln")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_or02n")
theme_override_styles/hover = SubResource("StyleBoxFlat_fxo88")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5aeu8")
theme_override_styles/normal = SubResource("StyleBoxFlat_g02qs")
text = "EXIT
"

[connection signal="finished" from="button_press" to="." method="_on_button_press_finished"]
[connection signal="pressed" from="CanvasLayer/Control/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/exit_button" to="." method="_on_exit_button_pressed"]
